@@ -1,3 +1,4 @@
+* Add option to strip leading and trailing whitespace from fields.Char
 * Allow column sql types to be tested from the table handler
 * Combine search and get_keys in DictSchemaMixin
 * Protect trusted devices against brute force attack
